// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MultiSelect snapshots renders 4 items 1`] = `
"▶ ○ TypeScript
  ○ JavaScript
  ○ Python
  ○ Rust"
`;

exports[`MultiSelect snapshots renders with defaultSelected 1`] = `
"▶ ◉ TypeScript
  ○ JavaScript
  ◉ Python
  ○ Rust"
`;
